tests/ipblockstest/connlist_output.txt
0.0.0.0-9.255.255.255 => default/cognetive-agents-d54st : All Connections
0.0.0.0-9.255.255.255 => default/cognetive-agents-js4qc : All Connections
0.0.0.0-9.255.255.255 => default/cognetive-agents-qr8gp : All Connections
0.0.0.0-9.255.255.255 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
0.0.0.0-9.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
0.0.0.0-9.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
0.0.0.0-9.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
0.0.0.0-9.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
0.0.0.0-9.255.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
0.0.0.0-9.255.255.255 => kube-system/calico-node-mgdlr : UDP 53
0.0.0.0-9.255.255.255 => kube-system/calico-node-ns8kw : All Connections
0.0.0.0-9.255.255.255 => kube-system/calico-node-ptdgj : All Connections
0.0.0.0-9.255.255.255 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
0.0.0.0-9.255.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf-p86gk : UDP 53
0.0.0.0-9.255.255.255 => kube-system/ibm-keepalived-watcher-57ghx : UDP 53
0.0.0.0-9.255.255.255 => kube-system/ibm-keepalived-watcher-gzdfm : UDP 53
0.0.0.0-9.255.255.255 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
0.0.0.0-9.255.255.255 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
0.0.0.0-9.255.255.255 => kube-system/ibm-kube-fluentd-h6rjg : UDP 53
0.0.0.0-9.255.255.255 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
0.0.0.0-9.255.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb-f8csd : UDP 53
0.0.0.0-9.255.255.255 => kube-system/tiller-deploy-5c45c9966b-nqwz6 : UDP 53
0.0.0.0-9.255.255.255 => kube-system/vpn-858f6d9777-2bw5m : UDP 53
10.0.0.0-10.255.255.255 => default/cognetive-agents-d54st : All Connections
10.0.0.0-10.255.255.255 => default/cognetive-agents-js4qc : All Connections
10.0.0.0-10.255.255.255 => default/cognetive-agents-qr8gp : All Connections
10.0.0.0-10.255.255.255 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
10.0.0.0-10.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
10.0.0.0-10.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
10.0.0.0-10.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
10.0.0.0-10.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
10.0.0.0-10.255.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
10.0.0.0-10.255.255.255 => kube-system/calico-node-ns8kw : All Connections
10.0.0.0-10.255.255.255 => kube-system/calico-node-ptdgj : All Connections
10.0.0.0-10.255.255.255 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
10.0.0.0-10.255.255.255 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
10.0.0.0-10.255.255.255 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
10.0.0.0-10.255.255.255 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
11.0.0.0-172.20.255.255 => default/cognetive-agents-d54st : All Connections
11.0.0.0-172.20.255.255 => default/cognetive-agents-js4qc : All Connections
11.0.0.0-172.20.255.255 => default/cognetive-agents-qr8gp : All Connections
11.0.0.0-172.20.255.255 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
11.0.0.0-172.20.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
11.0.0.0-172.20.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
11.0.0.0-172.20.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
11.0.0.0-172.20.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
11.0.0.0-172.20.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
11.0.0.0-172.20.255.255 => kube-system/calico-node-mgdlr : UDP 53
11.0.0.0-172.20.255.255 => kube-system/calico-node-ns8kw : All Connections
11.0.0.0-172.20.255.255 => kube-system/calico-node-ptdgj : All Connections
11.0.0.0-172.20.255.255 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
11.0.0.0-172.20.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf-p86gk : UDP 53
11.0.0.0-172.20.255.255 => kube-system/ibm-keepalived-watcher-57ghx : UDP 53
11.0.0.0-172.20.255.255 => kube-system/ibm-keepalived-watcher-gzdfm : UDP 53
11.0.0.0-172.20.255.255 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
11.0.0.0-172.20.255.255 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
11.0.0.0-172.20.255.255 => kube-system/ibm-kube-fluentd-h6rjg : UDP 53
11.0.0.0-172.20.255.255 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
11.0.0.0-172.20.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb-f8csd : UDP 53
11.0.0.0-172.20.255.255 => kube-system/tiller-deploy-5c45c9966b-nqwz6 : UDP 53
11.0.0.0-172.20.255.255 => kube-system/vpn-858f6d9777-2bw5m : UDP 53
172.21.0.0-172.21.255.255 => default/cognetive-agents-d54st : All Connections
172.21.0.0-172.21.255.255 => default/cognetive-agents-js4qc : All Connections
172.21.0.0-172.21.255.255 => default/cognetive-agents-qr8gp : All Connections
172.21.0.0-172.21.255.255 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
172.21.0.0-172.21.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
172.21.0.0-172.21.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
172.21.0.0-172.21.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
172.21.0.0-172.21.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
172.21.0.0-172.21.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
172.21.0.0-172.21.255.255 => kube-system/calico-node-ns8kw : All Connections
172.21.0.0-172.21.255.255 => kube-system/calico-node-ptdgj : All Connections
172.21.0.0-172.21.255.255 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
172.21.0.0-172.21.255.255 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
172.21.0.0-172.21.255.255 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
172.21.0.0-172.21.255.255 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
172.22.0.0-172.29.255.255 => default/cognetive-agents-d54st : All Connections
172.22.0.0-172.29.255.255 => default/cognetive-agents-js4qc : All Connections
172.22.0.0-172.29.255.255 => default/cognetive-agents-qr8gp : All Connections
172.22.0.0-172.29.255.255 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
172.22.0.0-172.29.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
172.22.0.0-172.29.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
172.22.0.0-172.29.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
172.22.0.0-172.29.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
172.22.0.0-172.29.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
172.22.0.0-172.29.255.255 => kube-system/calico-node-mgdlr : UDP 53
172.22.0.0-172.29.255.255 => kube-system/calico-node-ns8kw : All Connections
172.22.0.0-172.29.255.255 => kube-system/calico-node-ptdgj : All Connections
172.22.0.0-172.29.255.255 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
172.22.0.0-172.29.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf-p86gk : UDP 53
172.22.0.0-172.29.255.255 => kube-system/ibm-keepalived-watcher-57ghx : UDP 53
172.22.0.0-172.29.255.255 => kube-system/ibm-keepalived-watcher-gzdfm : UDP 53
172.22.0.0-172.29.255.255 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
172.22.0.0-172.29.255.255 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
172.22.0.0-172.29.255.255 => kube-system/ibm-kube-fluentd-h6rjg : UDP 53
172.22.0.0-172.29.255.255 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
172.22.0.0-172.29.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb-f8csd : UDP 53
172.22.0.0-172.29.255.255 => kube-system/tiller-deploy-5c45c9966b-nqwz6 : UDP 53
172.22.0.0-172.29.255.255 => kube-system/vpn-858f6d9777-2bw5m : UDP 53
172.30.0.0-172.30.255.255 => default/cognetive-agents-d54st : All Connections
172.30.0.0-172.30.255.255 => default/cognetive-agents-js4qc : All Connections
172.30.0.0-172.30.255.255 => default/cognetive-agents-qr8gp : All Connections
172.30.0.0-172.30.255.255 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
172.30.0.0-172.30.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
172.30.0.0-172.30.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
172.30.0.0-172.30.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
172.30.0.0-172.30.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
172.30.0.0-172.30.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
172.30.0.0-172.30.255.255 => kube-system/calico-node-ns8kw : All Connections
172.30.0.0-172.30.255.255 => kube-system/calico-node-ptdgj : All Connections
172.30.0.0-172.30.255.255 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
172.30.0.0-172.30.255.255 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
172.30.0.0-172.30.255.255 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
172.30.0.0-172.30.255.255 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
172.31.0.0-255.255.255.255 => default/cognetive-agents-d54st : All Connections
172.31.0.0-255.255.255.255 => default/cognetive-agents-js4qc : All Connections
172.31.0.0-255.255.255.255 => default/cognetive-agents-qr8gp : All Connections
172.31.0.0-255.255.255.255 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
172.31.0.0-255.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
172.31.0.0-255.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
172.31.0.0-255.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
172.31.0.0-255.255.255.255 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
172.31.0.0-255.255.255.255 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
172.31.0.0-255.255.255.255 => kube-system/calico-node-mgdlr : UDP 53
172.31.0.0-255.255.255.255 => kube-system/calico-node-ns8kw : All Connections
172.31.0.0-255.255.255.255 => kube-system/calico-node-ptdgj : All Connections
172.31.0.0-255.255.255.255 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
172.31.0.0-255.255.255.255 => kube-system/ibm-file-plugin-7bfb8b69bf-p86gk : UDP 53
172.31.0.0-255.255.255.255 => kube-system/ibm-keepalived-watcher-57ghx : UDP 53
172.31.0.0-255.255.255.255 => kube-system/ibm-keepalived-watcher-gzdfm : UDP 53
172.31.0.0-255.255.255.255 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
172.31.0.0-255.255.255.255 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
172.31.0.0-255.255.255.255 => kube-system/ibm-kube-fluentd-h6rjg : UDP 53
172.31.0.0-255.255.255.255 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
172.31.0.0-255.255.255.255 => kube-system/ibm-storage-watcher-8494b4b8bb-f8csd : UDP 53
172.31.0.0-255.255.255.255 => kube-system/tiller-deploy-5c45c9966b-nqwz6 : UDP 53
172.31.0.0-255.255.255.255 => kube-system/vpn-858f6d9777-2bw5m : UDP 53
default/cognetive-agents-d54st => 0.0.0.0-9.255.255.255 : All Connections
default/cognetive-agents-d54st => 10.0.0.0-10.255.255.255 : All Connections
default/cognetive-agents-d54st => 11.0.0.0-172.20.255.255 : All Connections
default/cognetive-agents-d54st => 172.21.0.0-172.21.255.255 : All Connections
default/cognetive-agents-d54st => 172.22.0.0-172.29.255.255 : All Connections
default/cognetive-agents-d54st => 172.30.0.0-172.30.255.255 : All Connections
default/cognetive-agents-d54st => 172.31.0.0-255.255.255.255 : All Connections
default/cognetive-agents-d54st => default/cognetive-agents-d54st : All Connections
default/cognetive-agents-d54st => default/cognetive-agents-js4qc : All Connections
default/cognetive-agents-d54st => default/cognetive-agents-qr8gp : All Connections
default/cognetive-agents-d54st => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
default/cognetive-agents-d54st => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
default/cognetive-agents-d54st => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
default/cognetive-agents-d54st => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
default/cognetive-agents-d54st => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
default/cognetive-agents-d54st => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
default/cognetive-agents-d54st => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
default/cognetive-agents-d54st => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
default/cognetive-agents-d54st => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
default/cognetive-agents-d54st => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
default/cognetive-agents-d54st => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
default/cognetive-agents-d54st => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
default/cognetive-agents-d54st => kube-system/calico-node-ns8kw : All Connections
default/cognetive-agents-d54st => kube-system/calico-node-ptdgj : All Connections
default/cognetive-agents-d54st => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
default/cognetive-agents-d54st => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
default/cognetive-agents-d54st => kube-system/ibm-kube-fluentd-2qw2g : All Connections
default/cognetive-agents-d54st => kube-system/ibm-kube-fluentd-qmp4w : All Connections
default/cognetive-agents-js4qc => 0.0.0.0-9.255.255.255 : All Connections
default/cognetive-agents-js4qc => 10.0.0.0-10.255.255.255 : All Connections
default/cognetive-agents-js4qc => 11.0.0.0-172.20.255.255 : All Connections
default/cognetive-agents-js4qc => 172.21.0.0-172.21.255.255 : All Connections
default/cognetive-agents-js4qc => 172.22.0.0-172.29.255.255 : All Connections
default/cognetive-agents-js4qc => 172.30.0.0-172.30.255.255 : All Connections
default/cognetive-agents-js4qc => 172.31.0.0-255.255.255.255 : All Connections
default/cognetive-agents-js4qc => default/cognetive-agents-d54st : All Connections
default/cognetive-agents-js4qc => default/cognetive-agents-js4qc : All Connections
default/cognetive-agents-js4qc => default/cognetive-agents-qr8gp : All Connections
default/cognetive-agents-js4qc => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
default/cognetive-agents-js4qc => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
default/cognetive-agents-js4qc => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
default/cognetive-agents-js4qc => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
default/cognetive-agents-js4qc => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
default/cognetive-agents-js4qc => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
default/cognetive-agents-js4qc => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
default/cognetive-agents-js4qc => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
default/cognetive-agents-js4qc => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
default/cognetive-agents-js4qc => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
default/cognetive-agents-js4qc => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
default/cognetive-agents-js4qc => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
default/cognetive-agents-js4qc => kube-system/calico-node-ns8kw : All Connections
default/cognetive-agents-js4qc => kube-system/calico-node-ptdgj : All Connections
default/cognetive-agents-js4qc => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
default/cognetive-agents-js4qc => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
default/cognetive-agents-js4qc => kube-system/ibm-kube-fluentd-2qw2g : All Connections
default/cognetive-agents-js4qc => kube-system/ibm-kube-fluentd-qmp4w : All Connections
default/cognetive-agents-qr8gp => 0.0.0.0-9.255.255.255 : All Connections
default/cognetive-agents-qr8gp => 10.0.0.0-10.255.255.255 : All Connections
default/cognetive-agents-qr8gp => 11.0.0.0-172.20.255.255 : All Connections
default/cognetive-agents-qr8gp => 172.21.0.0-172.21.255.255 : All Connections
default/cognetive-agents-qr8gp => 172.22.0.0-172.29.255.255 : All Connections
default/cognetive-agents-qr8gp => 172.30.0.0-172.30.255.255 : All Connections
default/cognetive-agents-qr8gp => 172.31.0.0-255.255.255.255 : All Connections
default/cognetive-agents-qr8gp => default/cognetive-agents-d54st : All Connections
default/cognetive-agents-qr8gp => default/cognetive-agents-js4qc : All Connections
default/cognetive-agents-qr8gp => default/cognetive-agents-qr8gp : All Connections
default/cognetive-agents-qr8gp => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
default/cognetive-agents-qr8gp => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
default/cognetive-agents-qr8gp => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
default/cognetive-agents-qr8gp => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
default/cognetive-agents-qr8gp => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
default/cognetive-agents-qr8gp => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
default/cognetive-agents-qr8gp => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
default/cognetive-agents-qr8gp => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
default/cognetive-agents-qr8gp => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
default/cognetive-agents-qr8gp => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
default/cognetive-agents-qr8gp => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
default/cognetive-agents-qr8gp => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
default/cognetive-agents-qr8gp => kube-system/calico-node-ns8kw : All Connections
default/cognetive-agents-qr8gp => kube-system/calico-node-ptdgj : All Connections
default/cognetive-agents-qr8gp => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
default/cognetive-agents-qr8gp => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
default/cognetive-agents-qr8gp => kube-system/ibm-kube-fluentd-2qw2g : All Connections
default/cognetive-agents-qr8gp => kube-system/ibm-kube-fluentd-qmp4w : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => 0.0.0.0-9.255.255.255 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => 10.0.0.0-10.255.255.255 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => 11.0.0.0-172.20.255.255 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => 172.21.0.0-172.21.255.255 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => 172.22.0.0-172.29.255.255 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => 172.30.0.0-172.30.255.255 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => 172.31.0.0-255.255.255.255 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => default/cognetive-agents-d54st : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => default/cognetive-agents-js4qc : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => default/cognetive-agents-qr8gp : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system/calico-node-ns8kw : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system/calico-node-ptdgj : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system/ibm-kube-fluentd-2qw2g : All Connections
default/cognetive-local-analyzer-7d77fb55cc-bs8rc => kube-system/ibm-kube-fluentd-qmp4w : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => 0.0.0.0-9.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => 10.0.0.0-10.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => 11.0.0.0-172.20.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => 172.21.0.0-172.21.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => 172.22.0.0-172.29.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => 172.30.0.0-172.30.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => 172.31.0.0-255.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => default/cognetive-agents-d54st : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => default/cognetive-agents-js4qc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => default/cognetive-agents-qr8gp : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system/calico-node-ns8kw : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system/calico-node-ptdgj : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => 0.0.0.0-9.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => 10.0.0.0-10.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => 11.0.0.0-172.20.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => 172.21.0.0-172.21.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => 172.22.0.0-172.29.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => 172.30.0.0-172.30.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => 172.31.0.0-255.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => default/cognetive-agents-d54st : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => default/cognetive-agents-js4qc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => default/cognetive-agents-qr8gp : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system/calico-node-ns8kw : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system/calico-node-ptdgj : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system/ibm-kube-fluentd-2qw2g : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch => kube-system/ibm-kube-fluentd-qmp4w : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => 0.0.0.0-9.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => 10.0.0.0-10.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => 11.0.0.0-172.20.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => 172.21.0.0-172.21.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => 172.22.0.0-172.29.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => 172.30.0.0-172.30.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => 172.31.0.0-255.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => default/cognetive-agents-d54st : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => default/cognetive-agents-js4qc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => default/cognetive-agents-qr8gp : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system/calico-node-ns8kw : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system/calico-node-ptdgj : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system/ibm-kube-fluentd-2qw2g : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw => kube-system/ibm-kube-fluentd-qmp4w : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => 0.0.0.0-9.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => 10.0.0.0-10.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => 11.0.0.0-172.20.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => 172.21.0.0-172.21.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => 172.22.0.0-172.29.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => 172.30.0.0-172.30.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => 172.31.0.0-255.255.255.255 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => default/cognetive-agents-d54st : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => default/cognetive-agents-js4qc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => default/cognetive-agents-qr8gp : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system/calico-node-ns8kw : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system/calico-node-ptdgj : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => 0.0.0.0-9.255.255.255 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => 10.0.0.0-10.255.255.255 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => 11.0.0.0-172.20.255.255 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => 172.21.0.0-172.21.255.255 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => 172.22.0.0-172.29.255.255 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => 172.30.0.0-172.30.255.255 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => 172.31.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => default/cognetive-agents-d54st : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => default/cognetive-agents-js4qc : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => default/cognetive-agents-qr8gp : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system/calico-node-ns8kw : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system/calico-node-ptdgj : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => 0.0.0.0-9.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => 10.0.0.0-10.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => 11.0.0.0-172.20.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => 172.21.0.0-172.21.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => 172.22.0.0-172.29.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => 172.30.0.0-172.30.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => 172.31.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => default/cognetive-agents-d54st : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => default/cognetive-agents-js4qc : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => default/cognetive-agents-qr8gp : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system/calico-node-ns8kw : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system/calico-node-ptdgj : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => 0.0.0.0-9.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => 10.0.0.0-10.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => 11.0.0.0-172.20.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => 172.21.0.0-172.21.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => 172.22.0.0-172.29.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => 172.30.0.0-172.30.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => 172.31.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => default/cognetive-agents-d54st : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => default/cognetive-agents-js4qc : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => default/cognetive-agents-qr8gp : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system/calico-node-ns8kw : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system/calico-node-ptdgj : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => 0.0.0.0-9.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => 10.0.0.0-10.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => 11.0.0.0-172.20.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => 172.21.0.0-172.21.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => 172.22.0.0-172.29.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => 172.30.0.0-172.30.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => 172.31.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => default/cognetive-agents-d54st : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => default/cognetive-agents-js4qc : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => default/cognetive-agents-qr8gp : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system/calico-node-ns8kw : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system/calico-node-ptdgj : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => 0.0.0.0-9.255.255.255 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => 10.0.0.0-10.255.255.255 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => 11.0.0.0-172.20.255.255 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => 172.21.0.0-172.21.255.255 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => 172.22.0.0-172.29.255.255 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => 172.30.0.0-172.30.255.255 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => 172.31.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => default/cognetive-agents-d54st : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => default/cognetive-agents-js4qc : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => default/cognetive-agents-qr8gp : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system/calico-node-ns8kw : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system/calico-node-ptdgj : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => 0.0.0.0-9.255.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => 10.0.0.0-10.255.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => 11.0.0.0-172.20.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => 172.21.0.0-172.21.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => 172.22.0.0-172.29.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => 172.30.0.0-172.30.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => 172.31.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => default/cognetive-agents-d54st : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => default/cognetive-agents-js4qc : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => default/cognetive-agents-qr8gp : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system/calico-node-ns8kw : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system/calico-node-ptdgj : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => 0.0.0.0-9.255.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => 10.0.0.0-10.255.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => 11.0.0.0-172.20.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => 172.21.0.0-172.21.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => 172.22.0.0-172.29.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => 172.30.0.0-172.30.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => 172.31.0.0-255.255.255.255 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => default/cognetive-agents-d54st : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => default/cognetive-agents-js4qc : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => default/cognetive-agents-qr8gp : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system/calico-node-ns8kw : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system/calico-node-ptdgj : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/calico-node-mgdlr => 0.0.0.0-9.255.255.255 : All Connections
kube-system/calico-node-mgdlr => 10.0.0.0-10.255.255.255 : All Connections
kube-system/calico-node-mgdlr => 11.0.0.0-172.20.255.255 : All Connections
kube-system/calico-node-mgdlr => 172.21.0.0-172.21.255.255 : All Connections
kube-system/calico-node-mgdlr => 172.22.0.0-172.29.255.255 : All Connections
kube-system/calico-node-mgdlr => 172.30.0.0-172.30.255.255 : All Connections
kube-system/calico-node-mgdlr => 172.31.0.0-255.255.255.255 : All Connections
kube-system/calico-node-mgdlr => default/cognetive-agents-d54st : All Connections
kube-system/calico-node-mgdlr => default/cognetive-agents-js4qc : All Connections
kube-system/calico-node-mgdlr => default/cognetive-agents-qr8gp : All Connections
kube-system/calico-node-mgdlr => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/calico-node-mgdlr => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/calico-node-mgdlr => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/calico-node-mgdlr => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/calico-node-mgdlr => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/calico-node-mgdlr => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/calico-node-mgdlr => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/calico-node-mgdlr => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/calico-node-mgdlr => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/calico-node-mgdlr => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/calico-node-mgdlr => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/calico-node-mgdlr => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/calico-node-mgdlr => kube-system/calico-node-mgdlr : All Connections
kube-system/calico-node-mgdlr => kube-system/calico-node-ns8kw : All Connections
kube-system/calico-node-mgdlr => kube-system/calico-node-ptdgj : All Connections
kube-system/calico-node-mgdlr => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/calico-node-mgdlr => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/calico-node-mgdlr => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/calico-node-mgdlr => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/calico-node-ns8kw => 0.0.0.0-9.255.255.255 : All Connections
kube-system/calico-node-ns8kw => 10.0.0.0-10.255.255.255 : All Connections
kube-system/calico-node-ns8kw => 11.0.0.0-172.20.255.255 : All Connections
kube-system/calico-node-ns8kw => 172.21.0.0-172.21.255.255 : All Connections
kube-system/calico-node-ns8kw => 172.22.0.0-172.29.255.255 : All Connections
kube-system/calico-node-ns8kw => 172.30.0.0-172.30.255.255 : All Connections
kube-system/calico-node-ns8kw => 172.31.0.0-255.255.255.255 : All Connections
kube-system/calico-node-ns8kw => default/cognetive-agents-d54st : All Connections
kube-system/calico-node-ns8kw => default/cognetive-agents-js4qc : All Connections
kube-system/calico-node-ns8kw => default/cognetive-agents-qr8gp : All Connections
kube-system/calico-node-ns8kw => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/calico-node-ns8kw => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/calico-node-ns8kw => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/calico-node-ns8kw => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/calico-node-ns8kw => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/calico-node-ns8kw => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/calico-node-ns8kw => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/calico-node-ns8kw => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/calico-node-ns8kw => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/calico-node-ns8kw => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/calico-node-ns8kw => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/calico-node-ns8kw => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/calico-node-ns8kw => kube-system/calico-node-ns8kw : All Connections
kube-system/calico-node-ns8kw => kube-system/calico-node-ptdgj : All Connections
kube-system/calico-node-ns8kw => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/calico-node-ns8kw => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/calico-node-ns8kw => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/calico-node-ns8kw => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/calico-node-ptdgj => 0.0.0.0-9.255.255.255 : All Connections
kube-system/calico-node-ptdgj => 10.0.0.0-10.255.255.255 : All Connections
kube-system/calico-node-ptdgj => 11.0.0.0-172.20.255.255 : All Connections
kube-system/calico-node-ptdgj => 172.21.0.0-172.21.255.255 : All Connections
kube-system/calico-node-ptdgj => 172.22.0.0-172.29.255.255 : All Connections
kube-system/calico-node-ptdgj => 172.30.0.0-172.30.255.255 : All Connections
kube-system/calico-node-ptdgj => 172.31.0.0-255.255.255.255 : All Connections
kube-system/calico-node-ptdgj => default/cognetive-agents-d54st : All Connections
kube-system/calico-node-ptdgj => default/cognetive-agents-js4qc : All Connections
kube-system/calico-node-ptdgj => default/cognetive-agents-qr8gp : All Connections
kube-system/calico-node-ptdgj => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/calico-node-ptdgj => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/calico-node-ptdgj => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/calico-node-ptdgj => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/calico-node-ptdgj => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/calico-node-ptdgj => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/calico-node-ptdgj => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/calico-node-ptdgj => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/calico-node-ptdgj => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/calico-node-ptdgj => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/calico-node-ptdgj => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/calico-node-ptdgj => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/calico-node-ptdgj => kube-system/calico-node-ns8kw : All Connections
kube-system/calico-node-ptdgj => kube-system/calico-node-ptdgj : All Connections
kube-system/calico-node-ptdgj => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/calico-node-ptdgj => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/calico-node-ptdgj => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/calico-node-ptdgj => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => 0.0.0.0-9.255.255.255 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => 10.0.0.0-10.255.255.255 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => 11.0.0.0-172.20.255.255 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => 172.21.0.0-172.21.255.255 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => 172.22.0.0-172.29.255.255 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => 172.30.0.0-172.30.255.255 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => 172.31.0.0-255.255.255.255 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => default/cognetive-agents-d54st : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => default/cognetive-agents-js4qc : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => default/cognetive-agents-qr8gp : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system/calico-node-ns8kw : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system/calico-node-ptdgj : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/heapster-7df8cb8c66-zxkk2 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => 0.0.0.0-9.255.255.255 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => 10.0.0.0-10.255.255.255 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => 11.0.0.0-172.20.255.255 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => 172.21.0.0-172.21.255.255 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => 172.22.0.0-172.29.255.255 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => 172.30.0.0-172.30.255.255 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => 172.31.0.0-255.255.255.255 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => default/cognetive-agents-d54st : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => default/cognetive-agents-js4qc : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => default/cognetive-agents-qr8gp : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system/calico-node-ns8kw : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system/calico-node-ptdgj : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system/ibm-file-plugin-7bfb8b69bf-p86gk : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf-p86gk => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/ibm-keepalived-watcher-57ghx => 0.0.0.0-9.255.255.255 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => 10.0.0.0-10.255.255.255 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => 11.0.0.0-172.20.255.255 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => 172.21.0.0-172.21.255.255 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => 172.22.0.0-172.29.255.255 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => 172.30.0.0-172.30.255.255 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => 172.31.0.0-255.255.255.255 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => default/cognetive-agents-d54st : All Connections
kube-system/ibm-keepalived-watcher-57ghx => default/cognetive-agents-js4qc : All Connections
kube-system/ibm-keepalived-watcher-57ghx => default/cognetive-agents-qr8gp : All Connections
kube-system/ibm-keepalived-watcher-57ghx => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/ibm-keepalived-watcher-57ghx => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/ibm-keepalived-watcher-57ghx => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/ibm-keepalived-watcher-57ghx => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system/calico-node-ns8kw : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system/calico-node-ptdgj : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system/ibm-keepalived-watcher-57ghx : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/ibm-keepalived-watcher-57ghx => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => 0.0.0.0-9.255.255.255 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => 10.0.0.0-10.255.255.255 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => 11.0.0.0-172.20.255.255 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => 172.21.0.0-172.21.255.255 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => 172.22.0.0-172.29.255.255 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => 172.30.0.0-172.30.255.255 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => 172.31.0.0-255.255.255.255 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => default/cognetive-agents-d54st : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => default/cognetive-agents-js4qc : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => default/cognetive-agents-qr8gp : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system/calico-node-ns8kw : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system/calico-node-ptdgj : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system/ibm-keepalived-watcher-gzdfm : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/ibm-keepalived-watcher-gzdfm => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => 0.0.0.0-9.255.255.255 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => 10.0.0.0-10.255.255.255 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => 11.0.0.0-172.20.255.255 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => 172.21.0.0-172.21.255.255 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => 172.22.0.0-172.29.255.255 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => 172.30.0.0-172.30.255.255 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => 172.31.0.0-255.255.255.255 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => default/cognetive-agents-d54st : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => default/cognetive-agents-js4qc : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => default/cognetive-agents-qr8gp : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system/calico-node-ns8kw : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system/calico-node-ptdgj : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/ibm-keepalived-watcher-wczq8 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/ibm-kube-fluentd-2qw2g => 0.0.0.0-9.255.255.255 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => 10.0.0.0-10.255.255.255 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => 11.0.0.0-172.20.255.255 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => 172.21.0.0-172.21.255.255 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => 172.22.0.0-172.29.255.255 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => 172.30.0.0-172.30.255.255 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => 172.31.0.0-255.255.255.255 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => default/cognetive-agents-d54st : All Connections
kube-system/ibm-kube-fluentd-2qw2g => default/cognetive-agents-js4qc : All Connections
kube-system/ibm-kube-fluentd-2qw2g => default/cognetive-agents-qr8gp : All Connections
kube-system/ibm-kube-fluentd-2qw2g => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/ibm-kube-fluentd-2qw2g => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/ibm-kube-fluentd-2qw2g => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/ibm-kube-fluentd-2qw2g => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system/calico-node-ns8kw : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system/calico-node-ptdgj : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/ibm-kube-fluentd-2qw2g => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/ibm-kube-fluentd-h6rjg => 0.0.0.0-9.255.255.255 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => 10.0.0.0-10.255.255.255 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => 11.0.0.0-172.20.255.255 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => 172.21.0.0-172.21.255.255 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => 172.22.0.0-172.29.255.255 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => 172.30.0.0-172.30.255.255 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => 172.31.0.0-255.255.255.255 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => default/cognetive-agents-d54st : All Connections
kube-system/ibm-kube-fluentd-h6rjg => default/cognetive-agents-js4qc : All Connections
kube-system/ibm-kube-fluentd-h6rjg => default/cognetive-agents-qr8gp : All Connections
kube-system/ibm-kube-fluentd-h6rjg => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/ibm-kube-fluentd-h6rjg => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/ibm-kube-fluentd-h6rjg => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/ibm-kube-fluentd-h6rjg => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system/calico-node-ns8kw : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system/calico-node-ptdgj : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system/ibm-kube-fluentd-h6rjg : All Connections
kube-system/ibm-kube-fluentd-h6rjg => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/ibm-kube-fluentd-qmp4w => 0.0.0.0-9.255.255.255 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => 10.0.0.0-10.255.255.255 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => 11.0.0.0-172.20.255.255 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => 172.21.0.0-172.21.255.255 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => 172.22.0.0-172.29.255.255 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => 172.30.0.0-172.30.255.255 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => 172.31.0.0-255.255.255.255 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => default/cognetive-agents-d54st : All Connections
kube-system/ibm-kube-fluentd-qmp4w => default/cognetive-agents-js4qc : All Connections
kube-system/ibm-kube-fluentd-qmp4w => default/cognetive-agents-qr8gp : All Connections
kube-system/ibm-kube-fluentd-qmp4w => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/ibm-kube-fluentd-qmp4w => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/ibm-kube-fluentd-qmp4w => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/ibm-kube-fluentd-qmp4w => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system/calico-node-ns8kw : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system/calico-node-ptdgj : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/ibm-kube-fluentd-qmp4w => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => 0.0.0.0-9.255.255.255 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => 10.0.0.0-10.255.255.255 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => 11.0.0.0-172.20.255.255 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => 172.21.0.0-172.21.255.255 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => 172.22.0.0-172.29.255.255 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => 172.30.0.0-172.30.255.255 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => 172.31.0.0-255.255.255.255 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => default/cognetive-agents-d54st : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => default/cognetive-agents-js4qc : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => default/cognetive-agents-qr8gp : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system/calico-node-ns8kw : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system/calico-node-ptdgj : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb-f8csd => kube-system/ibm-storage-watcher-8494b4b8bb-f8csd : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => 0.0.0.0-9.255.255.255 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => 10.0.0.0-10.255.255.255 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => 11.0.0.0-172.20.255.255 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => 172.21.0.0-172.21.255.255 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => 172.22.0.0-172.29.255.255 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => 172.30.0.0-172.30.255.255 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => 172.31.0.0-255.255.255.255 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => default/cognetive-agents-d54st : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => default/cognetive-agents-js4qc : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => default/cognetive-agents-qr8gp : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system/calico-node-ns8kw : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system/calico-node-ptdgj : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/tiller-deploy-5c45c9966b-nqwz6 => kube-system/tiller-deploy-5c45c9966b-nqwz6 : All Connections
kube-system/vpn-858f6d9777-2bw5m => 0.0.0.0-9.255.255.255 : All Connections
kube-system/vpn-858f6d9777-2bw5m => 10.0.0.0-10.255.255.255 : All Connections
kube-system/vpn-858f6d9777-2bw5m => 11.0.0.0-172.20.255.255 : All Connections
kube-system/vpn-858f6d9777-2bw5m => 172.21.0.0-172.21.255.255 : All Connections
kube-system/vpn-858f6d9777-2bw5m => 172.22.0.0-172.29.255.255 : All Connections
kube-system/vpn-858f6d9777-2bw5m => 172.30.0.0-172.30.255.255 : All Connections
kube-system/vpn-858f6d9777-2bw5m => 172.31.0.0-255.255.255.255 : All Connections
kube-system/vpn-858f6d9777-2bw5m => default/cognetive-agents-d54st : All Connections
kube-system/vpn-858f6d9777-2bw5m => default/cognetive-agents-js4qc : All Connections
kube-system/vpn-858f6d9777-2bw5m => default/cognetive-agents-qr8gp : All Connections
kube-system/vpn-858f6d9777-2bw5m => default/cognetive-local-analyzer-7d77fb55cc-bs8rc : All Connections
kube-system/vpn-858f6d9777-2bw5m => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-r66p2 : All Connections
kube-system/vpn-858f6d9777-2bw5m => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c-zv2ch : All Connections
kube-system/vpn-858f6d9777-2bw5m => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-lp6tw : All Connections
kube-system/vpn-858f6d9777-2bw5m => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df-vsh47 : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77-t6slc : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-9s486 : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db-bbvts : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46-zt2sf : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf-cvg7r : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42 : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system/calico-node-ns8kw : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system/calico-node-ptdgj : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system/heapster-7df8cb8c66-zxkk2 : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system/ibm-keepalived-watcher-wczq8 : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system/ibm-kube-fluentd-2qw2g : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system/ibm-kube-fluentd-qmp4w : All Connections
kube-system/vpn-858f6d9777-2bw5m => kube-system/vpn-858f6d9777-2bw5m : All Connections
